add class Methods